--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles.css" />
+          <link rel="icon" type="image/x-icon" href="./favicon.ico">
+
         <title>lars marcel braun</title>
     </head>
     <body>
-        <div>lars marcel braun</div>
+        <div class="name">lars marcel braun</div>
             <div class="bio">
                 <div>
                     *1994 in aachen grew up in oakland, seoul, lexington and
@@ -28,8 +30,10 @@
                     graz, staatstheater darmstadt, etc.
                 </div>
             </div>
-            <div>
-                get in touch: braun.lars@icloud.com
+            <div class="contact">
+                <a href="mailto:braun.lars@icloud.com">email</a>
+                
+                <a href="https://www.instagram.com/internetlars">instagram</a> 
             </div>
             <div class="projects">
 <div class="project">
@@ -40,6 +44,7 @@
                     set&costumes: victor labarthe d'arnoux <br> lights: daniel weiss
                 </p>
                 <p>(video upon request)</p>
+                
                 <p class="photographer">
                     photos copyright werner kmetitsch
                 </p>
