--- a/index.html
+++ b/index.html
@@ -12,22 +12,24 @@
     <body>
         <div class="name">lars marcel braun</div>
             <div class="bio">
+                                <div>stage director</div>
                 <div>
-                    *1994 in aachen grew up in oakland, seoul, lexington and
-                    zürich
+                    *1994 in aachen, then oakland, seoul, lexington, zürich, berlin
                 </div>
 
-                <div>is a stage director based in berlin</div>
                 <div>
-                    has directed shows for oper graz, staatstheater darmstadt, milkshake festival, pornceptual
+                    has directed shows for: oper graz, staatstheater darmstadt, milkshake festival, pornceptual
                 </div>
                 <div>
-                    has assisted and revived shows of many prolific directors such as david alden, barrie
+                    collaborated/assisted/revived shows from: david alden, barrie
                     kosky, andreas homoki, eva-maria höckmayr, kirill
-                    serebrennikov, dead centre, tatjana gürbaca, ted huffmann,
-                    benedict andrews, etc. @ opernhaus zürich, deutsche oper
-                    berlin, det kongelige teater, komische oper berlin, oper
+                    serebrennikov, jan-philip gloger, dead centre, tatjana gürbaca, ted huffmann,
+                    benedict andrews, etc. @ opernhaus zürich, semperoper dresden, deutsche oper
+                    berlin, det kongelige teater, bregenzer festspiele, komische oper berlin, oper
                     graz, staatstheater darmstadt, etc.
+                </div>
+                <div>
+                    is a fellow of the akademie musiktheater heute program 2024-2026
                 </div>
             </div>
             <div class="contact">
@@ -71,7 +73,7 @@
                     </div>
                     <div>
                         <img class="images"
-                            src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_035.jpg"
+                            src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_027.jpg"
                             alt=""
                         />
                     </div>
