--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
                     collaborated/assisted/revived shows from: david alden, barrie
                     kosky, andreas homoki, eva-maria höckmayr, kirill
                     serebrennikov, jan-philip gloger, dead centre, tatjana gürbaca, ted huffmann,
-                    benedict andrews, etc. @ opernhaus zürich, semperoper dresden, deutsche oper
+                    benedict andrews, etc.
+                    <div>
+                         @ opernhaus zürich, semperoper dresden, deutsche oper
                     berlin, det kongelige teater, bregenzer festspiele, komische oper berlin, oper
                     graz, staatstheater darmstadt, etc.
+                    </div>
                 </div>
                 <div>
-                    is a fellow of the akademie musiktheater heute program 2024-2026
+                    fellow of the akademie musiktheater heute program 2024-2026
                 </div>
             </div>
             <div class="contact">
