--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 </div>
 
                 <div>
-                    has directed shows for: oper graz, staatstheater darmstadt, milkshake festival, pornceptual
+                    directed @ oper graz, staatstheater darmstadt, milkshake festival, pornceptual
                 </div>
                 <div>
-                    collaborated/assisted/revived shows from: david alden, barrie
+                    also works w/ david alden, barrie
                     kosky, andreas homoki, eva-maria höckmayr, kirill
-                    serebrennikov, jan-philip gloger, dead centre, tatjana gürbaca, ted huffmann,
+                    serebrennikov, jan-philip gloger, nanine linning, christian spuck, dead centre, tatjana gürbaca, ted huffmann,
                     benedict andrews, etc.
                     <div>
                          @ opernhaus zürich, semperoper dresden, deutsche oper
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div>
-                    fellow of the akademie musiktheater heute program 2024-2026
+                    fellow of akademie musiktheater heute program 2024-2026
                 </div>
             </div>
             <div class="contact">
