--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div>
                     also works w/ david alden, barrie
                     kosky, andreas homoki, eva-maria höckmayr, kirill
-                    serebrennikov, jan-philip gloger, nanine linning, christian spuck, dead centre, tatjana gürbaca, ted huffmann,
+                    serebrennikov, jan-philipp gloger, nanine linning, christian spuck, dead centre, tatjana gürbaca, ted huffmann,
                     benedict andrews, etc.
                     <div>
                          @ opernhaus zürich, semperoper dresden, deutsche oper
