--- a/index.html
+++ b/index.html
@@ -41,6 +41,48 @@
                 <div><img class="images" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_027.jpg" alt="" /></div>
                 <div><img class="images" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_041.jpg" alt="" /></div>
             </div>
+            <div class="project">
+                <p class="name">la traviata</p>
+                <p>opera in 3 acts</p>
+                <p class="location">staatstheater darmstadt 2022</p>
+                <p class="team">regie/set/video: karsten wiegand <br> regie mitarbeit: lars marcel braun <br> costumes: alfred mayerhofer / veronika bischoff <br> choreo: otto pichler</p>
+                <p>(video upon request)</p>
+                <p class="photographer">photos copyright nils heck</p>
+            </div>
+            <div class="pics">
+                <div><img class="images" src="./websitepics/traviata1.jpg" alt="" /></div>
+                <div><img class="images" src="./websitepics/traviata2.jpg" alt="" /></div>
+                <div><img class="images" src="./websitepics/traviata3.jpg" alt="" /></div>
+                <div><img class="images" src="./websitepics/traviata4.jpg" alt="" /></div>
+                <div><img class="images" src="./websitepics/traviata5.jpg" alt="" /></div>
+            </div>
+            <div class="project">
+                <p class="name">you are not what you say i am</p>
+                <p>immersive interdisciplinary installation with drag performers, patrick mason, dancers of ndt, live-cameras</p>
+                <p class="location">milkshake festival 2019 x pornceptual (westerpark amsterdam)</p>
+                <p class="team">set: victor labarthe d'arnoux <br> lights: michiel knoop <br> vj: zoey vero</p>
+            </div>
+            <div class="pics">
+                <div><img class="images" src="./websitepics/IMG_9403.jpg" alt="" /></div>
+                <div><img class="images" src="./websitepics/kyle_performance_2.webp" alt="" /></div>
+                <div><img class="images" src="./websitepics/IMG_9419.jpg" alt="" /></div>
+                <div><img class="images" src="./websitepics/cassandre_performance_2.webp" alt="" /></div>
+                <div><img class="images" src="./websitepics/NDT_performance_2.webp" alt="" /></div>
+            </div>
+            <div class="project">
+                <p class="name">slagroom</p>
+                <p>interactive installation with drag performers and live-cameras</p>
+                <p class="location">milkshake festival 2018 x pornceptual (westerpark amsterdam)</p>
+                <p class="team">set: victor labarthe d'arnoux <br> lights: marijn hubregtse <br> vj: zoey vero</p>
+            </div>
+            <div class="pics">
+                <div><img class="images" src="./websitepics/milkshake-12.webp" alt="" /></div>
+                <div><img class="images" src="./websitepics/milkshake-14.webp" alt="" /></div>
+                <div><img class="images" src="./websitepics/milkshake-16.webp" alt="" /></div>
+                <div><img class="images" src="./websitepics/milkshake-18.webp" alt="" /></div>
+                <div><img class="images" src="./websitepics/milkshake-19.webp" alt="" /></div>
+                <div><img class="images" src="./websitepics/milkshake-5.webp" alt="" /></div>
+            </div>
         </div>
         <footer class="footer">© lars marcel braun 2025</footer>
     </body>
