--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     </head>
     <body>
         <div class="name">lars marcel braun</div>
+        <div>stage director</div>
+
             <div class="bio">
-                                <div>stage director</div>
                 <div>
                     *1994 in aachen, then oakland, seoul, lexington, zürich, berlin
                 </div>
@@ -28,11 +29,11 @@
                     <div>
                          @ opernhaus zürich, semperoper dresden, deutsche oper
                     berlin, det kongelige teater, bregenzer festspiele, komische oper berlin, oper
-                    graz, staatstheater darmstadt, etc.
+                    graz, deutsche oper am rhein, staatstheater darmstadt, etc.
                     </div>
                 </div>
                 <div>
-                    fellow of akademie musiktheater heute program 2024-2026
+                    fellow of akademie musiktheater heute (regie) 2024-2026
                 </div>
             </div>
             <div class="contact">
