--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
 
                 <div>
-                    directed @ oper graz, staatstheater darmstadt, milkshake festival, pornceptual
+                    directed @ semperoper, oper graz, staatstheater darmstadt, milkshake festival, pornceptual
                 </div>
                 <div>
                     also works w/ david alden, barrie
