--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
                 <div>
                     fellow of akademie musiktheater heute (regie) 2024-2026
                 </div>
+
+                <div class="performance-info">
+    <p>25/26</p>
+    <p>??? @ ???</p>
+    <p>barbiere @ oldenburgisches staatstheater</p>
+    <p>tancredi @ oper köln (co-regie)</p>
+  </div>
             </div>
             <div class="contact">
                 <a href="mailto:braun.lars@icloud.com">email</a>
