--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 <div class="performance-info">
     <p>25/26</p>
     <p>??? @ ???</p>
-    <p>barbiere @ oldenburgisches staatstheater</p>
-    <p>tancredi @ oper köln (co-regie)</p>
+    <p>humanoid @ semperoper (revival nov 2025)</p>
+    <p>barbiere @ oldenburgisches staatstheater (apr 2026)</p>
+    <p>tancredi @ oper köln (co-regie) (jun 2026)</p>
   </div>
             </div>
             <div class="contact">
