--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <div class="performance-info">
     <p>25/26</p>
-    <p>tba</p> @ tba</p>
+    <p>tba @ tba</p>
     <p><a href="https://www.semperoper.de/spielplan/stuecke/stid/humanoid/62472.html#a_3127">humanoid</a>🤖 @ semperoper (revival nov 2025)</p>
     <p><a href="https://staatstheater.de/programm/musiktheater/spielzeit-25/26/il-barbiere-di-siviglia">il barbiere di siviglia</a>💈 @ oldenburgisches staatstheater (apr 2026)</p>
     <p><a href="https://www.oper.koeln/de/produktionen/tancredi/1178">tancredi</a>🔪 @ oper köln (co-regie) (jun 2026)</p>
