--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
                 <div class="performance-info">
     <p>25/26</p>
-    <p><a href="https://musikprotokoll.orf.at/2025/projekt/nachhall">nachhall</a>🔊 @ steirischer herbst (premiere 5/10/25)</p>
-    <p><a href="https://www.semperoper.de/spielplan/stuecke/stid/humanoid/62472.html#a_3127">humanoid</a>🤖 @ semperoper (revival 11/12/25)</p>
-    <p><a href="https://staatstheater.de/programm/musiktheater/spielzeit-25/26/il-barbiere-di-siviglia">il barbiere di siviglia</a>💈 @ oldenburgisches staatstheater (premiere 18/4/26)</p>
-    <p><a href="https://www.oper.koeln/de/produktionen/tancredi/1178">tancredi</a>🔪 @ oper köln (co-regie) (premiere 20/6/26)</p>
+    <p><a href="https://musikprotokoll.orf.at/2025/projekt/nachhall">nachhall</a>🔊 @ steirischer herbst (premiere 5.10.25)</p>
+    <p><a href="https://www.semperoper.de/spielplan/stuecke/stid/humanoid/62472.html#a_3127">humanoid</a>🤖 @ semperoper (revival 12.11.25)</p>
+    <p><a href="https://staatstheater.de/programm/musiktheater/spielzeit-25/26/il-barbiere-di-siviglia">il barbiere di siviglia</a>💈 @ oldenburgisches staatstheater (premiere 18.4.26)</p>
+    <p><a href="https://www.oper.koeln/de/produktionen/tancredi/1178">tancredi</a>🔪 @ oper köln (co-regie) (premiere 20.6.26)</p>
   </div>
             </div>
             <div class="contact">
