--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles.css" />
           <link rel="icon" type="image/x-icon" href="./favicon.ico">
 
-        <title>lars marcel braun</title>
+        <title>lars marcel braun 라스</title>
     </head>
     <body>
         <div class="name">lars marcel braun</div>
