--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>lars marcel braun 라스</title>
     </head>
     <body>
-        <div class="name">lars marcel braun</div>
+        <div class="name">lars marcel braun 라스</div>
         <div>stage director</div>
 
             <div class="bio">
