--- a/index.html
+++ b/index.html
@@ -191,10 +191,11 @@
                 <li class="nav-item" data-target="la-traviata">la traviata</li>
                 <li class="nav-item" data-target="you-are-not">you are not what you say i am</li>
                 <li class="nav-item" data-target="slagroom">slagroom</li>
-                <li class="nav-item" data-target="nachhall">nachhall (25/26)</li>
-                <li class="nav-item" data-target="TBA">TBA (25/26)</li>
-                <li class="nav-item" data-target="il-barbiere">il barbiere di siviglia (25/26)</li>
-                <li class="nav-item" data-target="tancredi">tancredi (25/26)</li>
+                <li> </li>
+                <li class="nav-item" data-target="nachhall">nachhall</li>
+                <li class="nav-item" data-target="tba">tba</li>
+                <li class="nav-item" data-target="il-barbiere">il barbiere di siviglia</li>
+                <li class="nav-item" data-target="tancredi">tancredi</li>
                 <li class="nav-item" data-target="email">email</li>
                 <li class="nav-item" data-target="instagram">instagram</li>
             </ul>
