--- a/index.html
+++ b/index.html
@@ -202,12 +202,15 @@
         </nav>
 
         <main class="content-area">
-            <div class="content-section" id="lars-marcel-braun">
+            <div class="content-section" id="lars-marcel-braun 라스">
                 <div class="content-text">*1994 in aachen, then oakland, seoul, lexington, zürich, berlin
+                    <div></div>
 directed @ semperoper, oper graz, staatstheater darmstadt, milkshake festival, pornceptual
-also works w/ david alden, barrie kosky, andreas homoki, eva-maria höckmayr, kirill serebrennikov, jan-philipp gloger, nanine linning, christian spuck, dead centre, tatjana gürbaca, ted huffmann, benedict andrews, etc.
+                    <div></div>
+past works w/ david alden, barrie kosky, andreas homoki, eva-maria höckmayr, kirill serebrennikov, jan-philipp gloger, nanine linning, christian spuck, dead centre, tatjana gürbaca, ted huffmann, benedict andrews, etc.
 @ opernhaus zürich, semperoper dresden, deutsche oper berlin, det kongelige teater, bregenzer festspiele, komische oper berlin, oper graz, deutsche oper am rhein, staatstheater darmstadt, etc.
-fellow of akademie musiktheater heute (regie) 2024-2026</div>
+<div></div>
+                    fellow of akademie musiktheater heute (regie) 2024-2026</div>
             </div>
 
             <div class="content-section" id="geschichte">
@@ -227,12 +230,17 @@ set&costumes: victor labarthe d'arnoux lights: daniel weiss
             <div class="content-section" id="la-traviata">
                 <div class="content-text">opera in 3 acts
 staatstheater darmstadt 2022
-regie/set/video: karsten wiegand regie mitarbeit: lars marcel braun costumes: alfred mayerhofer / veronika bischoff choreo: otto pichler
+regie/set/video: karsten wiegand
+                    <div></div>
+                    regie mitarbeit: lars marcel braun
+                    <div></div>
+                    costumes: alfred mayerhofer / veronika bischoff
+                    <div></div>
+                    choreo: otto pichler
 (video upon request)</div>
                 <div class="image-gallery">
                     <img class="content-image" src="./websitepics/traviata1.jpg" alt="La Traviata production photo 1">
                     <img class="content-image image-large" src="./websitepics/traviata2.jpg" alt="La Traviata production photo 2">
-                    <img class="content-image image-small" src="https://picsum.photos/700/1100?random=7" alt="La Traviata production photo 3">
                     <img class="content-image" src="websitepics/traviata3.jpg" alt="La Traviata production photo 4">
                     <img class="content-image" src="websitepics/traviata4.jpg" alt="La Traviata production photo 5">
                     <img class="content-image" src="websitepics/traviata5.jpg" alt="La Traviata production photo 6">
@@ -242,8 +250,14 @@ regie/set/video: karsten wiegand regie mitarbeit: lars marcel braun costumes: al
 
             <div class="content-section" id="you-are-not">
                 <div class="content-text right-align">immersive interdisciplinary installation with drag performers, patrick mason, dancers of ndt, live-cameras
-milkshake festival 2019 x pornceptual (westerpark amsterdam)
-set: victor labarthe d'arnoux lights: michiel knoop vj: zoey vero</div>
+<div></div>
+                    milkshake festival 2019 x pornceptual (westerpark amsterdam)
+                    <div></div>
+set: victor labarthe d'arnoux
+                    <div></div>
+                    lights: michiel knoop
+                    <div></div>
+                    vj: zoey vero</div>
                 <div class="image-gallery">
                     <img class="content-image image-large" src="./websitepics/IMG_9403.jpg" alt="You Are Not installation photo 1">
                     <img class="content-image" src="./websitepics/kyle_performance_2.webp"  alt="You Are Not installation photo 2">
@@ -255,8 +269,14 @@ set: victor labarthe d'arnoux lights: michiel knoop vj: zoey vero</div>
 
             <div class="content-section" id="slagroom">
                 <div class="content-text">interactive installation with drag performers and live-cameras
+                    <div></div>
 milkshake festival 2018 x pornceptual (westerpark amsterdam)
-set: victor labarthe d'arnoux lights: marijn hubregtse vj: zoey vero</div>
+                    <div></div>
+set: victor labarthe d'arnoux 
+                    <div></div>
+                    lights: marijn hubregtse
+                    <div></div>
+                    vj: zoey vero</div>
                 <div class="image-gallery">
                     <img class="content-image" src="./websitepics/milkshake-12.webp" alt="Slagroom installation photo 1">
                     <img class="content-image" src="./websitepics/milkshake-14.webp" alt="Slagroom installation photo 2">
