--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div class="container">
         <nav class="sidebar">
             <ul class="nav-list">
-                <li class="nav-item" data-target="lars-marcel-braun">lars marcel braun</li>
+                <li class="nav-item" data-target="lars-marcel-braun">lars marcel braun 라스</li>
                 <li class="nav-item" data-target="geschichte">geschichte</li>
                 <li class="nav-item" data-target="humanoid">humanoid</li>
                 <li class="nav-item" data-target="la-traviata">la traviata</li>
@@ -202,7 +202,7 @@
         </nav>
 
         <main class="content-area">
-            <div class="content-section" id="lars-marcel-braun 라스">
+            <div class="content-section" id="lars-marcel-braun">
                 <div class="content-text">*1994 in aachen, then oakland, seoul, lexington, zürich, berlin
                     <div></div>
 directed @ semperoper, oper graz, staatstheater darmstadt, milkshake festival, pornceptual
@@ -214,9 +214,10 @@ past works w/ david alden, barrie kosky, andreas homoki, eva-maria höckmayr, ki
             </div>
 
             <div class="content-section" id="geschichte">
-                <div class="content-text right-align">operetta a capella by oscar strasnoy (2003)
+                <div class="content-text right-align">operetta a capella by oscar strasnoy (2003) <br>
 oper graz 2023
-set&costumes: victor labarthe d'arnoux lights: daniel weiss
+set&costumes: victor labarthe d'arnoux <br>
+                    lights: daniel weiss
 (video upon request)</div>
                 <div class="image-gallery">
                     <img class="content-image image-large" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_005.jpg" alt="Geschichte production photo 1">
@@ -228,14 +229,14 @@ set&costumes: victor labarthe d'arnoux lights: daniel weiss
             </div>
 
             <div class="content-section" id="la-traviata">
-                <div class="content-text">opera in 3 acts
-staatstheater darmstadt 2022
+                <div class="content-text">opera in 3 acts <br>
+staatstheater darmstadt 2022 <br>
 regie/set/video: karsten wiegand
-                    <div></div>
+                    <br>
                     regie mitarbeit: lars marcel braun
-                    <div></div>
+                    <br>
                     costumes: alfred mayerhofer / veronika bischoff
-                    <div></div>
+                    <br>
                     choreo: otto pichler
 (video upon request)</div>
                 <div class="image-gallery">
@@ -250,13 +251,13 @@ regie/set/video: karsten wiegand
 
             <div class="content-section" id="you-are-not">
                 <div class="content-text right-align">immersive interdisciplinary installation with drag performers, patrick mason, dancers of ndt, live-cameras
-<div></div>
+<br>
                     milkshake festival 2019 x pornceptual (westerpark amsterdam)
-                    <div></div>
+                    <br>
 set: victor labarthe d'arnoux
-                    <div></div>
+                    <br>
                     lights: michiel knoop
-                    <div></div>
+                    <br>
                     vj: zoey vero</div>
                 <div class="image-gallery">
                     <img class="content-image image-large" src="./websitepics/IMG_9403.jpg" alt="You Are Not installation photo 1">
@@ -269,13 +270,13 @@ set: victor labarthe d'arnoux
 
             <div class="content-section" id="slagroom">
                 <div class="content-text">interactive installation with drag performers and live-cameras
-                    <div></div>
+                    <br>
 milkshake festival 2018 x pornceptual (westerpark amsterdam)
-                    <div></div>
+                    <br>
 set: victor labarthe d'arnoux 
-                    <div></div>
+                    <br>
                     lights: marijn hubregtse
-                    <div></div>
+                    <br>
                     vj: zoey vero</div>
                 <div class="image-gallery">
                     <img class="content-image" src="./websitepics/milkshake-12.webp" alt="Slagroom installation photo 1">
@@ -288,11 +289,21 @@ set: victor labarthe d'arnoux
             </div>
 
             <div class="content-section" id="nachhall">
-                <div class="content-text right-align">@ musikprotokoll graz/steirischer herbst (world premiere 5.10.25)</div>
+                <div class="content-text right-align">world premiere 5.10.25 @ musikprotokoll graz/steirischer herbst</div>
             </div>
 
             <div class="content-section" id="humanoid">
-                <div class="content-text">@ semperoper (revival 12.11.25)</div>
+                <div class="content-text">sci-fi oper von leonard evers (2018)
+                    video: janic bebi <br>
+                    set: victor labarthe d'arnoux <br>
+                    costumes: selina tholl <br>
+                    dramaturgy: martin lühr <br>
+                    lights: marco dietzel <br>
+
+                    conducted by chloé dufresne
+                    w/ sofia savenko, dominika škrabalova, jongwoo hong, johannes wieners, ks andreas scheibner, komparserie der semperoper
+                
+                </div>
                 <div class="image-gallery">
                     <img class="content-image image-large" src="./websitepics/humanoid_khp_00934_FotoSebastianHoppe.jpg" alt="Humanoid production photo 1">
                     <img class="content-image" src="./websitepics/humanoid_khp_00478_FotoSebastianHoppe.jpg" alt="Humanoid production photo 2">
