--- a/index.html
+++ b/index.html
@@ -203,15 +203,11 @@
 
         <main class="content-area">
             <div class="content-section" id="lars-marcel-braun">
-                <div class="content-text">*1994 in aachen, then oakland, seoul, lexington, zürich, berlin
-                    <div></div>
-directed @ semperoper, oper graz, staatstheater darmstadt, milkshake festival, pornceptual
-                    <div></div>
-past works w/ david alden, barrie kosky, andreas homoki, eva-maria höckmayr, kirill serebrennikov, jan-philipp gloger, nanine linning, christian spuck, dead centre, tatjana gürbaca, ted huffmann, benedict andrews, etc.
-@ opernhaus zürich, semperoper dresden, deutsche oper berlin, det kongelige teater, bregenzer festspiele, komische oper berlin, oper graz, deutsche oper am rhein, staatstheater darmstadt, etc.
-<div></div>
-                    fellow of akademie musiktheater heute (regie) 2024-2026</div>
-            </div>
+                <div class="content-text">Lars Marcel Braun (1994 in Aachen; raised in Seoul, Oakland, Lexington, and Berlin) is a stage director working across opera, theatre, and visual arts. To finance his studies in physics, musicology, and Slavic literature in Zurich, he worked as an extra at the opera — an experience that exposed him to his first production and sparked his path into directing. After several internships and assistantships, he was appointed staff director at the Komische Oper Berlin from 2014 to 2017, personally selected by Barrie Kosky. Since then, he has worked as a freelance Spielleiter and artistic collaborator at major theatres across Europe. His practice has been shaped by collaborations with mentors including David Alden, Andreas Homoki, Eva-Maria Höckmayr, Jan-Philipp Gloger, Kirill Serebrennikov, Ted Huffmann, and Nanine Linning.
+
+His own artistic projects include a series of immersive installations at Milkshake Festival in Amsterdam, blending nightlife aesthetics with theatrical interventions featuring drag performers. Recent works include acclaimed debuts at Semperoper Dresden and Oper Graz. The upcoming season features a world premiere in Graz during steirischer herbst and his first opera buffa at the Oldenburgisches Staatstheater.
+
+Lars is a fellow of the Akademie Musiktheater heute in the 2024–2026 selection.
 
             <div class="content-section" id="geschichte">
                 <div class="content-text right-align">operetta a capella by oscar strasnoy (2003) <br>
