--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 His own artistic projects include a series of immersive installations at Milkshake Festival in Amsterdam, blending nightlife aesthetics with theatrical interventions featuring drag performers. Recent works include acclaimed debuts at Semperoper Dresden and Oper Graz. The upcoming season features a world premiere in Graz during steirischer herbst and his first opera buffa at the Oldenburgisches Staatstheater.
 
 Lars is a fellow of the Akademie Musiktheater heute in the 2024–2026 selection.
-
+                </div>
             <div class="content-section" id="geschichte">
                 <div class="content-text right-align">operetta a capella by oscar strasnoy (2003) <br>
 oper graz 2023
