--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@ His own artistic projects include a series of immersive installations at Milksha
 
 Lars is a fellow of the Akademie Musiktheater heute in the 2024–2026 selection.
                 </div>
+            </div>
             <div class="content-section" id="geschichte">
                 <div class="content-text right-align">operetta a capella by oscar strasnoy (2003) <br>
 oper graz 2023
