--- a/index.html
+++ b/index.html
@@ -80,6 +80,81 @@
             padding-top: 20px;
         }
 
+        /* New layout for sections with images */
+        .content-with-images {
+            display: flex;
+            gap: 40px;
+            align-items: flex-start;
+        }
+
+        .content-text {
+            max-width: 600px;
+            margin: 0 0 40px 0;
+            line-height: 1.3;
+            white-space: pre-line;
+            text-align: left;
+        }
+
+        .content-text.right-align {
+            text-align: right;
+            margin: 0 0 40px auto;
+        }
+
+        /* Sticky text styling for sections with images */
+        .content-text.sticky {
+            position: sticky;
+            top: 40px;
+            flex-shrink: 0;
+            width: 280px;
+            margin: 0;
+        }
+
+        .content-text.sticky.right-align {
+            text-align: right;
+            margin: 0;
+        }
+
+        .image-gallery {
+            margin: 40px 0;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            max-width: 600px;
+        }
+
+        /* When sticky text is used, adjust gallery */
+        .image-gallery.with-sticky-text {
+            margin: 0;
+            flex: 1;
+        }
+
+        .content-image {
+            width: 100%;
+            height: 400px;
+            object-fit: cover;
+            border: 1px solid #ccc;
+            display: block;
+        }
+
+        .content-link {
+            color: black;
+            text-decoration: none;
+        }
+
+        .content-link:hover {
+            text-decoration: underline;
+        }
+
+        .credits {
+            font-style: italic;
+            margin-top: 20px;
+            font-size: 12px;
+        }
+
+        .credits.with-sticky-text {
+            margin-top: 20px;
+        }
+
         /* Mobile responsive styles */
         @media screen and (max-width: 768px) {
             .container {
@@ -111,50 +186,33 @@
             .image-gallery {
                 max-width: 100%;
             }
-        }
 
-        .content-text {
-            max-width: 600px;
-            margin: 0 0 40px 0;
-            line-height: 1.3;
-            white-space: pre-line;
-            text-align: left;
-        }
+            /* Mobile image styling - prevent cutoff */
+            .content-image {
+                height: auto;
+                max-height: 50vh;
+                object-fit: contain;
+            }
 
-        .content-text.right-align {
-            text-align: right;
-            margin: 0 0 40px auto;
-        }
+            /* Disable sticky on mobile */
+            .content-with-images {
+                flex-direction: column;
+                gap: 20px;
+            }
 
-        .image-gallery {
-            margin: 40px 0;
-            display: flex;
-            flex-direction: column;
-            gap: 30px;
-            max-width: 600px;
-        }
+            .content-text.sticky {
+                position: static;
+                width: 100%;
+                margin: 0 0 20px 0;
+            }
 
-        .content-image {
-            width: 100%;
-            height: 400px;
-            object-fit: cover;
-            border: 1px solid #ccc;
-            display: block;
-        }
+            .content-text.sticky.right-align {
+                margin: 0 0 20px 0;
+            }
 
-        .content-link {
-            color: black;
-            text-decoration: none;
-        }
-
-        .content-link:hover {
-            text-decoration: underline;
-        }
-
-        .credits {
-            font-style: italic;
-            margin-top: 20px;
-            font-size: 12px;
+            .image-gallery.with-sticky-text {
+                margin: 0;
+            }
         }
     </style>
 </head>
@@ -187,67 +245,84 @@ His own artistic projects include a series of immersive installations at Milksha
 Lars is a fellow of the Akademie Musiktheater heute in the 2024–2026 selection.
                 </div>
             </div>
+
             <div class="content-section" id="geschichte">
-                <div class="content-text right-align">operetta a capella by oscar strasnoy (2003) <br>
+                <div class="content-with-images">
+                    <div class="content-text sticky right-align">operetta a capella by oscar strasnoy (2003) <br>
 oper graz 2023
 set&costumes: victor labarthe d'arnoux <br>
-                    lights: daniel weiss
+                        lights: daniel weiss
 (video upon request)</div>
-                <div class="image-gallery">
-                    <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_005.jpg" alt="Geschichte production photo 1">
-                    <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_029.jpg" alt="Geschichte production photo 2">
-                    <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_034.jpg" alt="Geschichte production photo 3">
-                    <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_027.jpg" alt="Geschichte production photo 4">
+                    <div>
+                        <div class="image-gallery with-sticky-text">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_005.jpg" alt="Geschichte production photo 1">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_029.jpg" alt="Geschichte production photo 2">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_034.jpg" alt="Geschichte production photo 3">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_027.jpg" alt="Geschichte production photo 4">
+                        </div>
+                        <div class="credits with-sticky-text">*photos copyright werner kmetitsch*</div>
+                    </div>
                 </div>
-                <div class="credits">*photos copyright werner kmetitsch*</div>
             </div>
 
             <div class="content-section" id="la-traviata">
-                <div class="content-text">opera in 3 acts
+                <div class="content-with-images">
+                    <div class="content-text sticky">opera in 3 acts
 staatstheater darmstadt 2022
 regie/set/video: karsten wiegand     
-                    regie mitarbeit: lars marcel braun
-                    costumes: alfred mayerhofer / veronika bischoff
-                    choreo: otto pichler
+                        regie mitarbeit: lars marcel braun
+                        costumes: alfred mayerhofer / veronika bischoff
+                        choreo: otto pichler
 (video upon request)</div>
-                <div class="image-gallery">
-                    <img class="content-image" src="./websitepics/traviata1.jpg" alt="La Traviata production photo 1">
-                    <img class="content-image" src="./websitepics/traviata2.jpg" alt="La Traviata production photo 2">
-                    <img class="content-image" src="websitepics/traviata3.jpg" alt="La Traviata production photo 4">
-                    <img class="content-image" src="websitepics/traviata4.jpg" alt="La Traviata production photo 5">
-                    <img class="content-image" src="websitepics/traviata5.jpg" alt="La Traviata production photo 6">
+                    <div>
+                        <div class="image-gallery with-sticky-text">
+                            <img class="content-image" src="./websitepics/traviata1.jpg" alt="La Traviata production photo 1">
+                            <img class="content-image" src="./websitepics/traviata2.jpg" alt="La Traviata production photo 2">
+                            <img class="content-image" src="websitepics/traviata3.jpg" alt="La Traviata production photo 4">
+                            <img class="content-image" src="websitepics/traviata4.jpg" alt="La Traviata production photo 5">
+                            <img class="content-image" src="websitepics/traviata5.jpg" alt="La Traviata production photo 6">
+                        </div>
+                        <div class="credits with-sticky-text">*photos copyright nils heck*</div>
+                    </div>
                 </div>
-                <div class="credits">*photos copyright nils heck*</div>
             </div>
 
             <div class="content-section" id="you-are-not">
-                <div class="content-text right-align">immersive interdisciplinary installation with drag performers, patrick mason, dancers of ndt, live-cameras
-                    milkshake festival 2019 x pornceptual (westerpark amsterdam)
+                <div class="content-with-images">
+                    <div class="content-text sticky right-align">immersive interdisciplinary installation with drag performers, patrick mason, dancers of ndt, live-cameras
+                        milkshake festival 2019 x pornceptual (westerpark amsterdam)
 set: victor labarthe d'arnoux                 
-                    lights: michiel knoop
-                    vj: zoey vero</div>
-                <div class="image-gallery">
-                    <img class="content-image" src="./websitepics/IMG_9403.jpg" alt="You Are Not installation photo 1">
-                    <img class="content-image" src="./websitepics/kyle_performance_2.webp"  alt="You Are Not installation photo 2">
-                    <img class="content-image" src="./websitepics/IMG_9419.jpg" alt="You Are Not installation photo 3">
-                    <img class="content-image" src="./websitepics/cassandre_performance_2.webp" alt="You Are Not installation photo 4">
-                    <img class="content-image" src="./websitepics/NDT_performance_2.webp" alt="You Are Not installation photo 5">
+                        lights: michiel knoop
+                        vj: zoey vero</div>
+                    <div>
+                        <div class="image-gallery with-sticky-text">
+                            <img class="content-image" src="./websitepics/IMG_9403.jpg" alt="You Are Not installation photo 1">
+                            <img class="content-image" src="./websitepics/kyle_performance_2.webp"  alt="You Are Not installation photo 2">
+                            <img class="content-image" src="./websitepics/IMG_9419.jpg" alt="You Are Not installation photo 3">
+                            <img class="content-image" src="./websitepics/cassandre_performance_2.webp" alt="You Are Not installation photo 4">
+                            <img class="content-image" src="./websitepics/NDT_performance_2.webp" alt="You Are Not installation photo 5">
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div class="content-section" id="slagroom">
-                <div class="content-text">interactive installation with drag performers and live-cameras
+                <div class="content-with-images">
+                    <div class="content-text sticky">interactive installation with drag performers and live-cameras
 milkshake festival 2018 x pornceptual (westerpark amsterdam)
 set: victor labarthe d'arnoux 
-                    lights: marijn hubregtse
-                    vj: zoey vero</div>
-                <div class="image-gallery">
-                    <img class="content-image" src="./websitepics/milkshake-12.webp" alt="Slagroom installation photo 1">
-                    <img class="content-image" src="./websitepics/milkshake-14.webp" alt="Slagroom installation photo 2">
-                    <img class="content-image" src="websitepics/milkshake-16.webp" alt="Slagroom installation photo 3">
-                    <img class="content-image" src="./websitepics/milkshake-18.webp" alt="Slagroom installation photo 4">
-                    <img class="content-image" src="./websitepics/milkshake-19.webp"  alt="Slagroom installation photo 5">
-                    <img class="content-image" src="./websitepics/milkshake-5.webp" alt="Slagroom installation photo 6">
+                        lights: marijn hubregtse
+                        vj: zoey vero</div>
+                    <div>
+                        <div class="image-gallery with-sticky-text">
+                            <img class="content-image" src="./websitepics/milkshake-12.webp" alt="Slagroom installation photo 1">
+                            <img class="content-image" src="./websitepics/milkshake-14.webp" alt="Slagroom installation photo 2">
+                            <img class="content-image" src="websitepics/milkshake-16.webp" alt="Slagroom installation photo 3">
+                            <img class="content-image" src="./websitepics/milkshake-18.webp" alt="Slagroom installation photo 4">
+                            <img class="content-image" src="./websitepics/milkshake-19.webp"  alt="Slagroom installation photo 5">
+                            <img class="content-image" src="./websitepics/milkshake-5.webp" alt="Slagroom installation photo 6">
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -256,24 +331,28 @@ set: victor labarthe d'arnoux
             </div>
 
             <div class="content-section" id="humanoid">
-                <div class="content-text">sci-fi oper by leonard evers (2018)
-                    semperoper dresden 2025
-                    video: janic bebi
-                    set: victor labarthe d'arnoux
-                    costumes: selina tholl
-                    dramaturgy: martin lühr
-                    lights: marco dietzel
+                <div class="content-with-images">
+                    <div class="content-text sticky">sci-fi oper by leonard evers (2018)
+                        semperoper dresden 2025
+                        video: janic bebi
+                        set: victor labarthe d'arnoux
+                        costumes: selina tholl
+                        dramaturgy: martin lühr
+                        lights: marco dietzel
 
-                    conducted by chloé dufresne
-                    w/ sofia savenko, dominika škrabalova, jongwoo hong, johannes wieners, ks andreas scheibner, komparserie der semperoper
-                
-                </div>
-                <div class="image-gallery">
-                    <img class="content-image" src="./websitepics/humanoid_khp_00934_FotoSebastianHoppe.jpg" alt="Humanoid production photo 1">
-                    <img class="content-image" src="./websitepics/humanoid_khp_00478_FotoSebastianHoppe.jpg" alt="Humanoid production photo 2">
-                    <img class="content-image" src="./websitepics/humanoid_ohp_02256_FotoSebastianHoppe.jpg" alt="Humanoid production photo 3">
-                    <img class="content-image" src="./websitepics/humanoid_ohp_04242_FotoSebastianHoppe.jpg" alt="Humanoid production photo 4">
-                    <img class="content-image" src="./websitepics/humanoid_ohp_04631_FotoSebastianHoppe.jpg" alt="Humanoid production photo 5">
+                        conducted by chloé dufresne
+                        w/ sofia savenko, dominika škrabalova, jongwoo hong, johannes wieners, ks andreas scheibner, komparserie der semperoper
+                    
+                    </div>
+                    <div>
+                        <div class="image-gallery with-sticky-text">
+                            <img class="content-image" src="./websitepics/humanoid_khp_00934_FotoSebastianHoppe.jpg" alt="Humanoid production photo 1">
+                            <img class="content-image" src="./websitepics/humanoid_khp_00478_FotoSebastianHoppe.jpg" alt="Humanoid production photo 2">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_02256_FotoSebastianHoppe.jpg" alt="Humanoid production photo 3">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_04242_FotoSebastianHoppe.jpg" alt="Humanoid production photo 4">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_04631_FotoSebastianHoppe.jpg" alt="Humanoid production photo 5">
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -286,7 +365,7 @@ set: victor labarthe d'arnoux
             </div>
 
             <div class="content-section" id="tancredi">
-                <div class="content-text">premiere 20.6.26 @ oper köln (co-regie)</div>
+                <div class="content-text right-align">premiere 20.6.26 @ oper köln (co-regie)</div>
             </div>
 
             <div class="content-section" id="email">
